--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,39 @@ body{
     background-color: yellow;
 }
 
+nav{
+    width: 30%;
+    background-color: rgb(39, 39, 39);
+    overflow: hidden;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0px;
+    border-radius: 10px;
+  }
+  nav li {
+    display: inline;
+    list-style-type: none;
+  }
+  nav ul {
+    padding: 10px;
+    margin: 0px;
+  }
+  
+  nav a {
+    border-radius: 10px;
+    display: inline-block;
+    color: #f2f2f2;
+    text-decoration: none;
+    font-size: 25px;
+    padding: 12px 14px 12px 14px;
+  }
+  
+  nav a:hover {
+    background-color: rgba(3, 255, 255, 0.55);
+    color: white;
+  }
+  
+  nav a.active {
+    background-color: rgba(72, 255, 0, 0.55);
+    color: white;
+  }
