--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,8 +39,13 @@ h1{
   margin-right:15px;
 }
 
-#editForm input[type=text]{
-  width: 100%;
+button {
+  margin: 8px;
+  padding: 8px;
+}
+
+#editForm input[type=text],textarea{
+  width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
 }
